--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background: url('/images/abstract-bg.jpg') no-repeat center center fixed;
+    background: url('/images/abstract-bg4.jpg') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
