--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -1,30 +1,26 @@
 <!-- views/categories.hbs -->
-<div class="row">
-    <div class="col-md-12">
-        <h2>Categories</h2>
-        <hr />
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Category ID</th>
-                        <th>Category Name</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each categories}}
-                        <tr>
-                            <td><a href="/items?category={{this.id}}">{{this.id}}</a></td>
-                            <td><a href="/items?category={{this.id}}">{{this.category}}</a></td>
-                        </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-        </div>
-        {{#unless categories}}
-            <div class="col-md-12 text-center">
-                <strong>{{message}}</strong>
-            </div>
-        {{/unless}}
-    </div>
-</div>
+<h2>Categories <a href="/categories/add" class="btn btn-success pull-right">Add Category</a></h2>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Category</th>
+            <th></th> <!-- Empty header for the remove button column -->
+        </tr>
+    </thead>
+    <tbody>
+        {{#if categories}}
+            {{#each categories}}
+                <tr>
+                    <td>{{this.category}}</td>
+                    <td>
+                        <a href="/categories/delete/{{this.id}}" class="btn btn-danger">Remove</a>
+                    </td>
+                </tr>
+            {{/each}}
+        {{else}}
+            <tr>
+                <td colspan="2" class="text-center">No Categories</td>
+            </tr>
+        {{/if}}
+    </tbody>
+</table>
